--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  margin-right: 20px;
 }
 .dialog img {
   margin-right: 10px;
@@ -26,16 +27,24 @@
   display: flex;
   flex-direction: column;
 }
+
+@media (min-width: 700px) {
+  .messages {
+    max-width: 300px;
+  }
+}
 .message {
-  color: cyan;
+  color: white;
   padding: 15px;
   display: inline-block;
+  margin-bottom: 10px;
 }
+
 .message:nth-child(even) {
   text-align: right;
 }
 .message span {
   padding: 10px 15px;
   border-radius: 20px;
-  background-color: lightgreen;
+  background-color: green;
 }
