--- a/src/components/common/FormsControls/FormControls.module.css
+++ b/src/components/common/FormsControls/FormControls.module.css
@@ -1,5 +1,12 @@
 .formControl {
 }
+.error {
+  color: yellowgreen;
+  font-weight: bold;
+  border: 1px solid red;
+  display: inline-block;
+  padding: 10px;
+}
 
 .error input {
 }
